# IINI4003-C-for-programmerere

Oving1/: CMakeLists.txt  oppgavea.cpp  oppgavea.h  oppgaveb.cpp  oppgaveb.h  temperatures.txt
Oving2/: CMakeLists.txt  oppgave1.cpp  oppgave2.txt  oppgave3.txt  oppgave4.cpp  oppgave4.h  oppgave5.cpp  oppgave5.h  oppgave6.cpp  oppgave6.h
Oving3/: CMakeLists.txt  Circle.cpp  Circle.h  Commodity.cpp  Commodity.h  Commodity_test.cpp  Commodity_test.h  oppgave2.cpp  oppgave2.h  oppgave4.cpp  oppgave4.h
Oving4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving5/: CMakeLists.txt  main.cpp
Oving6/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave2.h
Oving7/: CMakeLists.txt  Fraction.cpp  Fraction.h  Set.cpp  Set.h  oppgave1.cpp  oppgave2.cpp  oppgave2.h
Oving8/: CMakeLists.txt  Pair.cpp  oppgave1.cpp  oppgave2.cpp
